# interview_guide

./: .gitignore  README.md  api_server.py  app.py  interview_dataset.json  jd_dataset_50.json  pyproject.toml  requirements.txt  response_1769349345769.json
.github/workflows/: main_interview-guide.yml
backend/: .dockerignore  Dockerfile  answer_eval.json  pyproject.toml  requirements.txt
backend/src/interview_guide/: configuration.py  graph.py  intents.py  router.py
backend/src/interview_guide/agents/: evaluator.py  jd_parser.py  qgen.py  skill_clusterer.py
backend/src/interview_guide/api/: app.py
backend/src/interview_guide/api/routes/: __init__.py  agent.py  evals.py  health.py
backend/src/interview_guide/api/schemas/: __init__.py  agent.py
backend/src/interview_guide/evals/: __init__.py  runner.py
backend/src/interview_guide/storage/: __init__.py  db.py  prefs.py
backend/src/interview_guide/tools/: tavily.py
evals_data/: README.md
evals_data/outputs/: answers_eval_20260128_222005.json  answers_eval_20260128_222736.json
frontend/: app.js  index.html  styles.css
src/interview_guide/: graph.py  intents.py  router.py
src/interview_guide/agents/: jd_fetcher.py  profile.py  qgen.py  recommender.py
src/interview_guide/api/: __init__.py  app.py
src/interview_guide/api/power_tools/: __init__.py
src/interview_guide/api/power_tools/routes/: __init__.py  jd.py  questions.py
src/interview_guide/api/power_tools/schemas/: __init__.py  evaluation.py  profile.py  questions.py  (+2 more)
src/interview_guide/api/services/: __init__.py  agent_service.py
(+16 files in other folders)
